css/carousel.css
/* ... */
  
  #header .logo {
        display: inline-block;	
        height: 50px;
        width: 450px;	
        line-height: 50px;
        float: left;    
        font-family: "Nothing You Could Do";
        font-size: 140%;
        font-weight: 700;
        color: #fe0802; /* Bright-Red */  /*#e1264e;*/ /* Plum-Red */  

        transition: all 0.3s;         
    }
	
	#header .header-title { 
		margin-left: 110px;
		color: white;
	}	  
	
	.brand-image {
		width: 99px; 
		height: 99px; 
		position: absolute; 
		top: -25px; 
		filter: drop-shadow(1px 1px 1px #222) drop-shadow(0px 0px 0px #ccc);
	}
	 
	 .mobile-menu {
		display: block;
		position: absolute;
		opacity: 0;
		//top: -200px;
        top: 50px; 
        z-index: 99999999;        
		-webkit-transition: all 0.3s ease-in-out;
        
	}

	.mobile-menu-icon {
		display: none;
        width: 45px; height: 50px; 
        float: right;             
	}

/* --------------------- NAVIGATION MENU --------------------- */
   .nav, .nav a { 
	   position: relative;	   
       display: inline-block;
       float: right;
	   
       font-family: "Nothing You Could Do"; 
       font-size: 100%; 
       font-weight: 100;       
       color: #ccc;  
	}
	
  .nav ul { 
      margin: 0;
      padding: 0;
   }

   .nav li {
		list-style: none;
		display: inline-block;
   }
   
   .nav li.current  {
       background-color: rgba(0,0,0,0.4);	
       color: white;
       font-weight: 700;
	}


    #header .nav a {
      line-height: 50px;
      margin-left: 25px;  
      transition: all 0.3s; 
	}
	
    #header .nav a:hover { color: white; text-decoration: none; }
	
	#header .nav li {		
		padding-right: 20px;
		text-align: center;
        font-size: 110%;
	}		  

	#nav-select {
		display: none;
	}


/* Special class on .container surrounding .navbar, used for positioning it into place. */
.navbar-wrapper {
    background-color: beige;  
}

.navbar-container { 
    height: 50px;
    padding: 0px;  /* Added to keep navbar from adding a horizontal scroll bar at certain widths */
	margin: 0px; 
    position: absolute;
    width: 100%;   
    z-index: 1000;
    background-color: rgba(0,0,0, 0.6);     
    transition: all 1s;	
	1border: 2px solid red;
	
	display: none;
}

.navbar { background-color: rgba(0,0,0,0); border: none; font-family: "Nothing You Could Do"; font-size: 130%; }

.navbar-header .navbar-brand {color: white; float: right; padding-left: 130px; font-weight: 700; }

/* CUSTOMIZE THE CAROUSEL
-------------------------------------------------- */

#myCarousel { height: 750px; width: 100%; }

/* Carousel base class */
.carousel {
  height: 750px;
  margin-bottom: 0px; 
  overflow: hidden; 
}

/* Since positioning the image, we need to help out the caption */
.carousel-caption {
  z-index: 10;
}

/* Declare heights because of positioning of img element */
.carousel .item {
  height: 750px;
  background-color: #777;
}
.carousel-inner > .item > img {
  position: absolute;
  top: 0;
  left: 0;
  min-width: 100%;
  min-height: 750px;
  width: 100%; 
  height: auto;    
}

.carousel-control.left { background-image: none; }
.carousel-control.right { background-image: none; }


/* ABOUT SECTION 
-------------------------------------------------- */

.about {  
    background: linear-gradient(to right, rgba(0, 0, 0, .95) 35%, rgba(0, 0, 0, 0.3)), url('../images/tea_1.jpg');	
	background-attachment: fixed;
    background-size: cover;  
    color: white; 
    font-size: 150%; 
    min-height: 450px;     
    top: -200px; 	 
}

.section-about {    
    padding: 0px 0px;
    position: relative; 
    left: -25%;
    width: 400px; 
    top: 100px; 
}


.community {
    background-color: beige; 
    background: linear-gradient(rgba(255, 255, 255, 0.8) 70%, rgba(0, 0, 0, 0.0)), url('../images/table_1.jpg');	
    background-size: cover;   
    color: dimgray;     
    height: 600px; 
    text-align: left; 	
}

.community span.glyphicon { 
    font-size: 6em;     
    text-shadow: 2px 2px 2px #888;
       
    display: flex;
	justify-content: center;    
}

.community .container .row div { margin: 100px 0px; }

.community h2 {   
    height: 2em; 
    line-height: 2em; 
    font-size: 2em;     
    text-shadow: 1px 1px 0px gray;    
    font-family: "Nothing you could do";
}

.community p {   
  font-size: 125%;  
}

.community .btn { font-weight: 700; font-size: 150%; font-family: "Abel";  display: flex; 	justify-content: center;  box-shadow: 2px 2px 6px #888, inset 0px 0px 1px #777; }


/* NEXT EVENT BANNER
-------------------------------------------------- */
.upcoming-events {      
    color: white;  
}


.events { 
    position: relative; 
	overflow-x: hidden; 
	background:  repeating-linear-gradient(
				  45deg,
				  #606dbc,
				  #606dbc 10px,
				  #465298 10px,
				  #465298 20px
	);
	background-size: cover; 
	
	border-top: 20px solid white; 
	border-bottom: 20px solid white;
	box-shadow: 1px 1px 10px black; 
		
	z-index: 999;	 
    height: 275px; 	
}

.events h2 { border: 0px solid white; line-height: 2em; font-size: 3em; text-shadow: 4px 4px 3px gray;   width: 100%;  transform:  skew(-35deg, 0); }
.events p { font-size: 4em; text-style: uppercase; font-weight: 700; 
			font-family: "lobster"; color: orange; text-shadow: 1px 1px 1px yellow, 1px 1px 6px black; letter-spacing: 6px; 
		}	

/* CALENDAR & EVENT SECTION
-------------------------------------------------- */

.event { 
	border: 1px solid #ddd; 
	border-right: 10px solid orange; 
	padding: 10px; 
	transition: all 0.5s ease-in-out; 
	border-radius: 2px; 
	margin-bottom: 40px; 
	background-color: #fff;  
	box-shadow: 1px 1px 7px #000; 	
	transition: all 4s;
}

#eventList { 
	background: rgba(255, 255, 255, 0.5); 
    margin: 0px 20px
}

.event h3 { color: orange; font-size: 250%; text-transform: uppercase; margin: 0px; font-family: "Ubuntu"; }

.event_details { margin-left: 20px; float: left; width: 60%; }	
.event_date { color: black; font-size: 150%; }
/* ... */

